fix: footer content overflow and animation twitch.

--- a/src/theme/DocPage/Layout/Main/styles.module.scss
+++ b/src/theme/DocPage/Layout/Main/styles.module.scss
@@ -11,7 +11,8 @@
 
 @include utils.responsive('lg', 'up') {
   .sidebarSpace {
-    transition: 0.3s;
+    transition: var(--ifm-transition-fast) ease,
+      flex var(--ifm-transition-fast) ease;
     flex-shrink: 0;
     width: var(--doc-sidebar-width);
     max-width: var(--doc-sidebar-max-width);
